[package]
name = "hachet"
version = "0.1.0"
authors = ["Emmanuel Thompson <eet6646@gmail.com>"]
edition = "2018"
license = "MIT or Apache2-0"
repository = "https://github.com/sharksforarms/hachet"
keywords = ["packet", "network", "serialization", "deserialization", "parse"]
categories = ["network-programming", "simulation", "parsing", "no-std"]
description = "Network packet manipulation toolkit"
readme = "README.md"

[features]
default = []

[dependencies]
hashbrown = "0.11"
deku = { version = "0.12", default-features = false, features = ["alloc"] }

[dev-dependencies]
rstest = "0.10.0"
hexlit = "0.5.0"
criterion = "0.3.4"

[[bench]]
name = "bench_layers"
harness = false
