[package]
name = "hatchet"
version = "0.1.0"
authors = ["Emmanuel Thompson <eet6646@gmail.com>"]
edition = "2018"
license = "MIT or Apache2-0"
repository = "https://github.com/sharksforarms/hatchet"
keywords = ["packet", "network", "serialization", "deserialization", "parse"]
categories = ["network-programming", "simulation", "parsing", "no-std"]
description = "Network packet manipulation toolkit"
readme = "README.md"

[package.metadata.docs.rs]
features = ["pnet", "pcap", "netmap"]

[features]
netmap = ["pnet/netmap"]
default = ["std", "pcap"]
std = ["pnet", "pcap-file", "chrono"]
pcap = ["pnet/pcap"]

[dependencies]
hashbrown = "0.12"
deku = { version = "0.12", default-features = false, features = ["alloc"] }
pnet = { version = "0.28", optional = true }
pcap-file = { version = "1.1.1", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
rstest = "0.11.0"
hexlit = "0.5.0"
criterion = "0.3.4"

[[bench]]
name = "bench_layers"
harness = false

[[example]]
name = "read_pcap"
required-features = ["pcap"]

[[example]]
name = "read_write_interface"
required-features = ["pcap"]
